@@ -1,3 +1,8 @@
+2007-02-12  Akim Demaille  <akim.demaille@free.fr>
+
+	Add debug operator<<
+	* network.h: For timeval and fd_set.
+
 2007-02-10  Akim Demaille  <akim.demaille@free.fr>
 
 	Import Escape from tc
